--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
           <th class="border border-gray-700 py-2 biomeFont w-[20%]">⧗</th>
           <th class="border border-gray-700 py-2 biomeFont">Team A</th>
           <th class="border border-gray-700 py-2 biomeFont">Team B</th>
-          <th class="border border-gray-700 py-2 biomeFont w-[22%]">Score</th>
+          <th class="border border-gray-700 py-2 biomeFont w-[20%]">Score</th>
+          <th class="border border-gray-700 py-2 biomeFont w-[8%]"></th>
         </tr>
       </thead>
       <tbody id="historyTable"></tbody>
@@ -212,7 +213,7 @@
     <div class="bg-gray-800 text-white p-6 rounded-xl shadow-lg max-w-sm w-full text-center">
       <h2 id="confirmMessage" class="text-lg biomeFont mb-8">Are you sure?</h2>
       <div class="flex justify-center space-x-4 mt-4">
-        <button id="confirmAgreeBtn" class="bg-red-500 text-black py-2 px-6 rounded-full biomeFont-bold">RESET</button>
+        <button id="confirmAgreeBtn" class="bg-red-500 text-black py-2 px-6 rounded-full biomeFont-bold">Delete</button>
         <button id="confirmCancelBtn" class="border border-red-500 text-red-500 py-2 px-6 rounded-full biomeFont-bold">Cancel</button>
       </div>
     </div>
