--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DoubleShot</title>
+
+  <!-- iOS PWA Support & Icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Badminton Doubles Match Tracker">
+  <link rel="apple-touch-icon" href="img/icon-180.png">
+
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="biome-font.css" />
-  <link rel="icon" href="img/favicon.png" type="image/png" />
-  <script src="https://cdn.tailwindcss.com"></script> <!-- change for prod -->
+  <link rel="icon" href="img/icon-192.png" type="image/png" />
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+  <link rel="stylesheet" href="tailwind.css">
 </head>
 <body class="bg-gray-900 text-white font-sans p-4 mx-auto limitFrame">
 
@@ -226,5 +234,15 @@
   </footer>
 
   <script src="app.js"></script>
+  <script src="service-worker.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('./service-worker.js')
+        .then(reg => console.log('Service Worker registered', reg))
+        .catch(err => console.log('Service Worker registration failed', err));
+    });
+  }
+</script>
 </body>
 </html>
