--- a/index.html
+++ b/index.html
@@ -234,11 +234,10 @@
   </footer>
 
   <script src="app.js"></script>
-  <script src="service-worker.js"></script>
   <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('./service-worker.js')
+      navigator.serviceWorker.register('service-worker.js')
         .then(reg => console.log('Service Worker registered', reg))
         .catch(err => console.log('Service Worker registration failed', err));
     });
