--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
         <!-- Team A -->
         <div id="teamAwrapper" class="text-center bg-gray-800 p-4 rounded border border-gray-500">
           <div>
-            <select id="teamA1" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mb-2 biomeFont"></select>
+            <select id="teamA1" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mb-2 biomeFont" style="text-align: center; text-align-last: center;"></select>
             <div id="andTeal" class="text-center text-lg">&</div>
-              <select id="teamA2" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mt-2 biomeFont"></select>
+              <select id="teamA2" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mt-2 biomeFont" style="text-align: center; text-align-last: center;"></select>
           </div>
           <input type="number" id="scoreA" class="text-center text-xl text-teal-300 biomeFont w-1/2 px-1 py-3 mt-4 bg-gray-900 rounded hidden" />
         </div>
         <!-- Team B -->
         <div id="teamBwrapper" class="text-center bg-gray-800 p-4 rounded border border-gray-500">
           <div>
-            <select id="teamB1" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mb-2 biomeFont"></select>
+            <select id="teamB1" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mb-2 biomeFont" style="text-align: center; text-align-last: center;"></select>
             <div id="andPurple" class="text-center text-lg">&</div>
-              <select id="teamB2" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mt-2 biomeFont"></select>
+              <select id="teamB2" class="bg-gray-700 text-white text-center p-2 rounded screenToWidth mt-2 biomeFont" style="text-align: center; text-align-last: center;"></select>
           </div>
           <input type="number" id="scoreB" class="text-center text-xl text-purple-300 biomeFont w-1/2 px-1 py-3 mt-4 bg-gray-900 rounded hidden" />
         </div>
